--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "a99-group04",
   "version": "1.0.0",
-  "description": "This is a web app",
+  "description": "A web app that allows trading of second-handed items",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
