package.json updated

--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
-  "name": "tradenc",
+  "name": "a99-Group04",
   "version": "1.0.0",
-  "private": true,
+  "description": "tradenc is a web app where users can post informations about items they want to sell",
+  "author": "COMP 426 Group 4",
+  "license": "GPL-3.0-or-later",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
